--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     .prose li { margin: 0.25rem 0; }
     .prose p { margin: 0.5rem 0; }
     .prose code { background: #f1f5f9; padding: 0.125rem 0.375rem; border-radius: 0.25rem; font-size: 0.875rem; }
-    .prose pre { background: #1e293b; color: #e2e8f0; padding: 1rem; border-radius: 0.5rem; overflow-x: auto; margin: 0.75rem 0; }
+    .prose pre { background: #1e293b; color: #e2e8f0; padding: 1rem; border-radius: 0.5rem; overflow-x: auto; margin: 0.75rem 0; white-space: pre-wrap; word-break: break-word; }
     .prose pre code { background: transparent; padding: 0; color: inherit; font-size: 0.8125rem; }
+    .prose { overflow-wrap: break-word; word-break: break-word; }
     .prose h1 { font-size: 1.5rem; font-weight: 700; margin: 1.5rem 0 0.75rem; color: #1e293b; }
     .prose h2 { font-size: 1.25rem; font-weight: 600; margin: 1.25rem 0 0.5rem; color: #334155; }
     .prose h3 { font-size: 1.1rem; font-weight: 600; margin: 1rem 0 0.5rem; color: #475569; }
@@ -1568,7 +1569,7 @@ ${contactsRef}`;
       };
 
       return (
-        <div className={`w-[420px] flex-shrink-0 border-l border-gray-200 flex flex-col h-full bg-white ${closing ? 'slide-out-right' : 'slide-in-right'}`}>
+        <div className={`w-[560px] flex-shrink-0 border-l border-gray-200 flex flex-col h-full bg-white ${closing ? 'slide-out-right' : 'slide-in-right'}`}>
           {/* Panel Header */}
           <div className="flex-shrink-0 bg-emerald-600 text-white px-5 py-4">
             <div className="flex items-start justify-between">
