--- a/index.html
+++ b/index.html
@@ -1488,11 +1488,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
         <div className="min-h-screen bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 flex items-center justify-center p-4">
           <div className="bg-white rounded-2xl shadow-2xl w-full max-w-md p-8">
             <div className="text-center mb-8">
-              <div className="w-16 h-16 bg-gradient-to-br from-blue-500 to-blue-600 rounded-2xl flex items-center justify-center mx-auto mb-4 shadow-lg">
-                <svg className="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                </svg>
-              </div>
+              <img src="/apple-touch-icon.png" alt="CAT Onboard" className="w-16 h-16 rounded-2xl mx-auto mb-4 shadow-lg object-cover" />
               <h1 className="text-2xl font-bold text-gray-800">CAT Onboard</h1>
               <p className="text-gray-500 mt-2">Sign in to get started</p>
             </div>
@@ -1594,11 +1590,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             {/* Logo / Brand */}
             <div className="px-5 py-5 border-b border-gray-100">
               <div className="flex items-center gap-3">
-                <div className="w-9 h-9 bg-gradient-to-br from-blue-500 to-blue-600 rounded-lg flex items-center justify-center shadow-sm">
-                  <svg className="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                  </svg>
-                </div>
+                <img src="/apple-touch-icon.png" alt="CAT Onboard" className="w-9 h-9 rounded-lg shadow-sm object-cover" />
                 <div>
                   <div className="font-semibold text-gray-800 text-sm">CAT Onboard</div>
                   <div className="text-xs text-gray-400">Copenhagen AirTaxi A/S</div>
